client/src/styles/dashboard.css
hr {
  margin: 0.1rem;
}

#wrapper {
  width: 100%;
}

.dashbord-container {
  display: flex;
  overflow-x: hidden;
  min-height: 94vh;
  width: 100%;
}

.band-wrapper {
  display: flex;
  position: fixed;
  width: 60px;
  height: 100vh;
  bottom: 0;
}

.band-1 {
  width: 60px;
  height: 100%;
  position: relative;
}

.band-1-content {
  position: absolute;
  bottom: 0;
  width: 150px;
  height: 100%;
  background-color: #181b2c;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.main {
  width: 98%;
  transform: translateX(60px);
  background-color: #242943;
  z-index: 4;
  transition: transform 0.4s ease-in-out;
  display: flex;
}

.main.open-band-1 {
  transform: translateX(150px);
}

.band-1-content > div {
  display: flex;
  align-items: center;
  font-size: 1.2rem;
}

.band-1-content > div > .profile-pic {
  width: 40px;
  height: 40px;
  object-fit: cover;
  margin: 10px;
  margin-right: 15px;
  border-radius: 50%;
}

.band-1-content > div > svg {
  margin: 10px;
  margin-right: 15px;
  color: #384169;
}

.projects-band {
  display: flex;
  background-color: #1c203a;
}

.pro-container {
  order: 1;
  width: 5px;
  overflow-x: hidden;
  overflow-y: auto;
  transition: width 0.3s ease-out;
}

.control {
  width: 50px;
  order: 2;
}

.control .btn,
.texting .btn {
  text-align: center;
  font-size: 1.5rem;
  padding: 0.2rem 1rem;
  background-color: #181b2c;
  cursor: pointer;
}

.control .btn svg {
  transition: transform 0.3s ease-out;
}

.control.open .btn svg {
  transform: rotate(180deg) translateX(5%);
}

.control.open ~ .pro-container {
  width: 300px;
}

.control h4 {
  transform: rotate(90deg) translateX(50%);
  text-transform: uppercase;
  letter-spacing: 5px;
  font-size: 1.5rem;
  margin: 0;
  opacity: 0.8;
}

.texting {
  z-index: 6;
  display: block;
  position: absolute;
  right: 0;
  top: 20%;
}

.texting .btn {
  border-bottom-left-radius: 10px;
  border-top-left-radius: 10px;
  padding: 0.5rem;
}

.pro-inner {
  width: 300px;
  padding: 1rem;
}

.pro-inner .form-link,
.pro-inner .pro-link {
  margin: 0.8rem 1rem;
  display: flex;
  align-items: center;
  text-align: center;
  cursor: pointer;
  padding-right: 10%;
}

.project-wrap {
  width: 95%;
  margin: 2rem 0px 0px 5%;
}

.project-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project-header .detele-btn {
  background-color: rgba(255, 0, 0, 0.7);
  display: grid;
  place-items: center;
  padding: 0.4rem 0.6rem;
  border-radius: 0.2rem;
  cursor: pointer;
}

.detele-btn svg {
  font-size: 1.2rem;
}

@keyframes shake {
  from {
    transform: rotate(15deg);
  }
  to {
    transform: rotate(-15deg);
    transform-origin: center center;
  }
}

.detele-btn:hover svg {
  animation: shake 0.1s ease-in-out 0.1s infinite alternate;
}

.form-link > h3,
.pro-link > h3 {
  margin-bottom: 0;
  margin-left: 8%;
}

.form-link > .icon {
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.5rem;
  display: grid;
  place-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  transition: 0.5s transform ease-in-out;
}
.pro-link-prog {
  height: 2.6rem;
  width: 2.6rem;
  font-size: 1.2rem;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  font-weight: 800;
  position: relative;
  transition: transform 0.3s ease-in-out;
}

.pro-link-prog svg {
  position: relative;
  height: 2.6rem;
  width: 2.6rem;
}

.pro-link:hover .pro-link-prog {
  transform: scale(1.2);
}

.pro-link-prog svg circle {
  height: 2.6rem;
  width: 2.6rem;
  fill: none;
  stroke-width: 2.2;
  transform-origin: center;
  transform: translate(1px, -1px) rotate(-90deg);
  stroke-linecap: round;
  stroke-dasharray: 125;
}

.pro-link-prog svg circle.red {
  stroke: rgba(255, 0, 0, 0.9);
}

.pro-link-prog svg circle.yellow {
  stroke: rgba(255, 255, 0, 0.9);
}

.pro-link-prog svg circle.green {
  stroke: rgba(0, 255, 0, 0.9);
}

.pro-link-prog .number {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pro-link-prog .number h4 {
  margin-bottom: 0;
  font-size: 1.1rem;
  color: #eee;
}
.pro-link-prog .number h4 span {
  font-size: 0.6rem;
}

.form-link:hover .icon {
  transform: scale(1.2) rotate(180deg);
}

.pro-main {
  padding: 1rem 2rem;
  width: 90%;
}

.pro-main h1 {
  line-height: normal;
  margin-bottom: 0;
}

.ck-editor__main * {
  color: #181b2c;
  font-weight: 600;
}

.selecet-staff,
.seleceted-staff {
  width: 100%;
  height: 100%;
  display: flex;
  margin-top: 2rem;
}

.seleceted-staff {
  margin-top: 0rem;
}

.selecet-staff > div,
.seleceted-staff > div {
  flex: 100% 1 1;
  display: flex;
  flex-direction: column;
  min-height: 5rem;
  max-height: 12rem;
  overflow-x: hidden;
  overflow-y: auto;
}

.display-files input[type='file'],
.project-form input[type='file'] {
  outline: none;
  color: transparent;
  background-color: rgba(0, 0, 0, 0.8);
  cursor: pointer;
  width: 7rem;
  height: 7rem;
  position: relative;
}

.display-files .inputs {
  width: 8rem;
  position: relative;
}

.display-files input[type='file'] {
  width: 8rem;
  height: 8rem;
  background-color: black;
  flex: 100% 0 1;
}

.display-files input[type='file']::-webkit-file-upload-button,
.project-form input[type='file']::-webkit-file-upload-button {
  visibility: hidden;
}

.display-files input[type='file']::after,
.project-form input[type='file']::after {
  position: absolute;
  top: 0;
  left: 0;
  content: '\f067';
  display: block;
  font-family: 'Font Awesome 5 Free';
  font-weight: 800;
  font-size: 2.5rem;
  color: white;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.display-files input[type='submit'] {
  position: absolute;
  width: 8rem;
  bottom: 0;
  left: 0;
  line-height: normal;
}

.display-files input[type='file']::after {
  font-weight: 1000;
  font-size: 3rem;
}

.display-files,
.project-form .files {
  position: relative;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
}

.display-files .file-card {
  width: 8rem;
  height: 8rem;
  position: relative;
}

.display-files .file-card img {
  object-fit: cover;
  width: 8rem;
  height: 8rem;
}

.display-files .file-card .content {
  position: absolute;
  top: 0;
  left: 0;
  width: 8rem;
  height: 8rem;
  display: grid;
  place-items: center;
}

.display-files .file-card .content .btns {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 40%;
  display: flex;
  justify-content: space-around;
  font-size: 1.4rem;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.8);
  transform-origin: bottom;
  transform: scaleY(0);
  transition: 0.3s transform ease-out;
}

.display-files .file-card .content:hover .btns {
  transform: scaleY(1);
}

.display-files .file-card .content .btns svg {
  cursor: pointer;
  transition: 0.25s ease-in-out transform;
}

.display-files .file-card .content .btns svg:hover {
  transform: scale(1.2);
}

.files-selected {
  flex: 100% 1 1;
  display: flex;
  height: 100%;
  margin-top: auto;
}

.preview-file {
  height: 7rem;
  width: 7rem;
  overflow: hidden;
  position: relative;
}

.preview-file div {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.preview-file .bg source,
.preview-file .bg img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: bottom;
}

.preview-file .file-name {
  background-color: rgba(0, 0, 0, 0.2);
  display: grid;
  place-items: center;
}

.preview-file .file-name p {
  word-break: break-all;
  font-weight: 700;
}

.preview-file .delete {
  z-index: 4;
  background-color: rgba(0, 0, 0, 0.8);
  display: grid;
  place-items: center;
  font-size: 1.5rem;
  transition: 0.3s transform ease-in-out;
  transform-origin: bottom;
  transform: scaleY(0);
}

.preview-file .delete svg {
  cursor: pointer;
  transition: 0.3s color ease-out;
}

.preview-file .delete svg:hover {
  color: red;
}

.preview-file:hover .delete {
  transform: scaleY(1);
}

